--- a/app/src/main/res/drawable/ic_note_check_d.xml
+++ b/app/src/main/res/drawable/ic_note_check_d.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="?attr/clAccent" />
+    <solid android:color="@color/accentDark" />
     <size
-        android:width="@dimen/icon_24dp"
-        android:height="@dimen/icon_24dp" />
+        android:width="24dp"
+        android:height="24dp" />
 </shape>
