--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,7 +17,7 @@
 
     <androidx.cardview.widget.CardView
         style="@style/Card"
-        app:cardBackgroundColor="?attr/clBackgroundItem"
+        app:cardBackgroundColor="?attr/clBackgroundView"
         app:cardCornerRadius="@dimen/radius_2dp"
         app:cardUseCompatPadding="false">
 
@@ -33,7 +34,8 @@
                 android:id="@+id/itemRank_bv_visible"
                 style="@style/ItemRank.Button"
                 android:layout_marginEnd="@dimen/layout_8dp"
-                app:srcCompat="@drawable/ic_visible_on" />
+                app:srcCompat="@drawable/ic_visible_on"
+                />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -44,7 +46,8 @@
                 <TextView
                     android:id="@+id/itemRank_tv_name"
                     style="@style/ItemRank.Name"
-                    android:text='@{itemRank.name}' />
+                    android:text='@{itemRank.name}'
+                    tools:text="@string/test_rank_name" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -53,11 +56,13 @@
                     <TextView
                         style="@style/ItemRank.Info"
                         android:layout_marginEnd="@dimen/layout_4dp"
-                        android:text='@{@string/list_item_rank_text_count + " " + itemRank.getTextCount()}' />
+                        android:text='@{@string/list_item_rank_text_count + " " + itemRank.getTextCount()}'
+                        tools:text="@string/test_rank_text" />
 
                     <TextView
                         style="@style/ItemRank.Info"
-                        android:text='@{@string/list_item_rank_roll_count + " " + itemRank.getRollCount()}' />
+                        android:text='@{@string/list_item_rank_roll_count + " " + itemRank.getRollCount()}'
+                        tools:text="@string/test_rank_roll" />
 
                 </LinearLayout>
             </LinearLayout>
