--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -1,25 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".app.view.act.ActMain">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".app.view.act.ActMain">
 
     <FrameLayout
-        android:id="@+id/actMain_fl_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+        <FrameLayout
+                android:id="@+id/actMain_fl_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/actMain_fab"
+                style="?attr/styleFab"
+                app:useCompatPadding="false"
+                app:srcCompat="@drawable/ic_add"/>
+
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/actMain_bnv_menu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/clPrimary"
-        app:itemIconTint="@drawable/se_menu_main_item"
-        app:itemTextColor="@drawable/se_menu_main_item"
-        app:menu="@menu/menu_act_main" />
+            android:id="@+id/actMain_bnv_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/clPrimary"
+            app:itemIconTint="@drawable/se_menu_main_item"
+            app:itemTextColor="@drawable/se_menu_main_item"
+            app:menu="@menu/menu_act_main"/>
 
 </LinearLayout>
