--- a/app/src/main/res/layout/frg_text.xml
+++ b/app/src/main/res/layout/frg_text.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -21,7 +22,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/clBackgroundEnter"
+        android:background="?attr/clBackgroundView"
         android:orientation="vertical">
 
         <include
@@ -49,7 +50,8 @@
                     android:id="@+id/frgText_tv_text"
                     style="@style/Text.Read"
                     android:text='@{itemNote.text}'
-                    android:visibility='@{!keyEdit ? v.VISIBLE : v.INVISIBLE}' />
+                    android:visibility='@{!keyEdit ? v.VISIBLE : v.INVISIBLE}'
+                    tools:text="@string/test_note_text" />
 
             </FrameLayout>
 
