--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -25,15 +26,17 @@
             android:layout_height="@dimen/icon_48dp"
             android:layout_gravity="center"
             android:background='@{Draw.getIconColor(context, position)}'
-            android:contentDescription="@null" />
+            android:contentDescription="@null"
+            tools:background="@drawable/ic_color_00_l" />
 
         <ImageView
             android:id="@+id/itemColor_iv_check"
-            android:layout_width="@dimen/icon_24dp"
-            android:layout_height="@dimen/icon_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:contentDescription="@null"
-            app:srcCompat="@drawable/ic_check" />
+            app:srcCompat="@drawable/ic_check"
+            tools:tint="@color/noteRedDark" />
 
         <ImageView
             android:id="@+id/itemColor_iv_click"
