--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -1,226 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
-        <import type="sgtmelon.scriptum.office.Help.Clr" />
+        <import type="sgtmelon.scriptum.office.Help.Clr"/>
 
-        <import type="sgtmelon.scriptum.office.Help.Pref" />
-
-        <import type="sgtmelon.scriptum.office.Help.Time" />
+        <import type="sgtmelon.scriptum.office.Help.Pref"/>
 
         <import
-            alias="def"
-            type="sgtmelon.scriptum.office.annot.def.DefTheme" />
+                alias="def"
+                type="sgtmelon.scriptum.office.annot.def.DefTheme"/>
 
         <import
-            alias="text"
-            type="android.text.TextUtils" />
+                alias="text"
+                type="android.text.TextUtils"/>
 
         <import
-            alias="v"
-            type="android.view.View" />
+                alias="v"
+                type="android.view.View"/>
 
         <variable
-            name="itemNote"
-            type="sgtmelon.scriptum.app.model.item.ItemNote" />
+                name="itemNote"
+                type="sgtmelon.scriptum.app.model.item.ItemNote"/>
 
         <variable
-            name="listRoll"
-            type="java.util.List&lt;sgtmelon.scriptum.app.model.item.ItemRoll&gt;" />
+                name="listRoll"
+                type="java.util.List&lt;sgtmelon.scriptum.app.model.item.ItemRoll&gt;"/>
 
     </data>
 
     <androidx.cardview.widget.CardView
-        style="@style/Card"
-        app:cardBackgroundColor='@{Clr.getNote(context, itemNote.color, false)}'
-        app:cardCornerRadius="@dimen/radius_2dp"
-        app:cardUseCompatPadding="false">
+            style="@style/Card"
+            app:cardBackgroundColor='@{Clr.getNote(context, itemNote.color, false)}'
+            app:cardCornerRadius="@dimen/radius_2dp"
+            app:cardUseCompatPadding="false"
+            tools:cardBackgroundColor="?attr/clPrimary">
 
         <FrameLayout
-            android:id="@+id/itemNote_fl_click"
-            style="@style/ItemNote.Click">
-
-            <FrameLayout
-                android:id="@+id/itemNote_fl_check"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/clSelect"
-                tools:visibility="gone">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@drawable/ic_note_check"
-                    android:padding="@dimen/layout_4dp"
-                    android:tint="?attr/clBackground"
-                    app:srcCompat="@drawable/ic_check" />
-
-            </FrameLayout>
+                android:id="@+id/itemNote_fl_click"
+                style="@style/ItemNote.Click">
 
             <LinearLayout style="@style/ItemNote.Container">
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/itemNote_tv_name"
-                        style="@style/ItemNote.Name"
-                        android:text='@{itemNote.name}'
-                        android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}'
-                        tools:text="@string/test_note_name" />
+                            style="@style/ItemNote.Name"
+                            android:text='@{itemNote.name}'
+                            android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}'
+                            tools:text="@string/test_note_name"/>
 
-                    <LinearLayout
-                        android:id="@+id/itemNote_ll_roll_1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:visibility='@{listRoll.size() &gt;= 1 ? v.VISIBLE : v.GONE}'>
+                    <include
+                            layout="@layout/inc_item_note_roll"
+                            android:visibility='@{listRoll.size() &gt;= 1 ? v.VISIBLE : v.GONE}'
+                            app:itemRoll='@{listRoll.size() &gt;= 1 ? listRoll.get(0) : null}'/>
 
-                        <ImageView
-                            android:id="@+id/itemNote_iv_check_1"
-                            style="@style/ItemNote.Indicator"
-                            android:contentDescription="@null"
-                            android:src='@{listRoll.size() &gt;= 1 &amp;&amp; listRoll.get(0).check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-                            tools:srcCompat="@drawable/ic_check_done" />
+                    <include
+                            layout="@layout/inc_item_note_roll"
+                            android:visibility='@{listRoll.size() &gt;= 2 ? v.VISIBLE : v.GONE}'
+                            app:itemRoll='@{listRoll.size() &gt;= 2 ? listRoll.get(1) : null}'/>
 
-                        <TextView
-                            android:id="@+id/itemNote_tv_text_1"
-                            style="@style/ItemNote.Roll"
-                            android:text='@{listRoll.size() &gt;= 1 ? listRoll.get(0).text : ""}'
-                            tools:text="@string/test_note_roll_1" />
+                    <include
+                            layout="@layout/inc_item_note_roll"
+                            android:visibility='@{listRoll.size() &gt;= 3 ? v.VISIBLE : v.GONE}'
+                            app:itemRoll='@{listRoll.size() &gt;= 3 ? listRoll.get(2) : null}'/>
 
-                    </LinearLayout>
+                    <include
+                            layout="@layout/inc_item_note_roll"
+                            android:visibility='@{listRoll.size() &gt;= 4 ? v.VISIBLE : v.GONE}'
+                            app:itemRoll='@{listRoll.size() &gt;= 4 ? listRoll.get(3) : null}'/>
 
-                    <LinearLayout
-                        android:id="@+id/itemNote_ll_roll_2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:visibility='@{listRoll.size() &gt;= 2 ? v.VISIBLE : v.GONE}'>
-
-                        <ImageView
-                            android:id="@+id/itemNote_iv_check_2"
-                            style="@style/ItemNote.Indicator"
-                            android:contentDescription="@null"
-                            android:src='@{listRoll.size() &gt;= 2 &amp;&amp; listRoll.get(1).check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-                            tools:srcCompat="@drawable/ic_check_outline" />
-
-                        <TextView
-                            android:id="@+id/itemNote_tv_text_2"
-                            style="@style/ItemNote.Roll"
-                            android:text='@{listRoll.size() &gt;= 2 ? listRoll.get(1).text : ""}'
-                            tools:text="@string/test_note_roll_2" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/itemNote_ll_roll_3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:visibility='@{listRoll.size() &gt;= 3 ? v.VISIBLE : v.GONE}'>
-
-                        <ImageView
-                            android:id="@+id/itemNote_iv_check_3"
-                            style="@style/ItemNote.Indicator"
-                            android:contentDescription="@null"
-                            android:src='@{listRoll.size() &gt;= 3 &amp;&amp; listRoll.get(2).check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-                            tools:srcCompat="@drawable/ic_check_done" />
-
-                        <TextView
-                            android:id="@+id/itemNote_tv_text_3"
-                            style="@style/ItemNote.Roll"
-                            android:text='@{listRoll.size() &gt;= 3 ? listRoll.get(2).text : ""}'
-                            tools:text="@string/test_note_roll_3" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/itemNote_ll_roll_4"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:visibility='@{listRoll.size() &gt;= 4 ? v.VISIBLE : v.GONE}'>
-
-                        <ImageView
-                            android:id="@+id/itemNote_iv_check_4"
-                            style="@style/ItemNote.Indicator"
-                            android:contentDescription="@null"
-                            android:src='@{listRoll.size() &gt;= 4 &amp;&amp; listRoll.get(3).check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-                            tools:srcCompat="@drawable/ic_check_outline" />
-
-                        <TextView
-                            android:id="@+id/itemNote_tv_text_4"
-                            style="@style/ItemNote.Roll"
-                            android:text='@{listRoll.size() &gt;= 4 ? listRoll.get(3).text : ""}'
-                            tools:text="@string/test_note_roll_4" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/layout_8dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/itemNote_iv_rank"
-                            style="@style/ItemNote.Indicator.Info"
-                            android:contentDescription="@null"
-                            android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
-                            app:srcCompat="@drawable/ic_rank" />
-
-                        <ImageView
-                            android:id="@+id/itemNote_iv_bind"
-                            style="@style/ItemNote.Indicator.Info"
-                            android:contentDescription="@null"
-                            android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
-                            app:srcCompat="@drawable/ic_bind_roll" />
-
-                        <TextView
-                            android:id="@+id/itemNote_tv_text"
-                            style="@style/ItemNote.Info"
-                            android:layout_width="wrap_content"
-                            android:text='@{itemNote.text}'
-                            tools:text="@string/test_note_done" />
-
-                        <TextView
-                            android:id="@+id/itemNote_tv_change"
-                            style="@style/ItemNote.Info"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text='@{Time.formatNoteDate(context, itemNote.change)}'
-                            tools:text="@string/test_note_time" />
-
-                        <TextView
-                            android:id="@+id/itemNote_tv_create"
-                            style="@style/ItemNote.Info"
-                            android:layout_width="wrap_content"
-                            android:text='@{Time.formatNoteDate(context, itemNote.create)}'
-                            tools:text="@string/test_note_time" />
-
-                    </LinearLayout>
+                    <include
+                            layout="@layout/inc_item_note_info"
+                            app:itemNote='@{itemNote}'/>
 
                 </LinearLayout>
 
+                <!-- TODO закруглить края -->
+
                 <View
-                    android:id="@+id/itemNote_iv_color"
-                    style="@style/ItemNote.Color.Vertical"
-                    android:background='@{Clr.getNote(context, itemNote.color, true)}'
-                    android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}'
-                    tools:background="@color/noteGreenDark"
-                    tools:visibility="visible" />
+                        style="@style/ItemNote.Color.Vertical"
+                        android:background='@{Clr.getNote(context, itemNote.color, true)}'
+                        android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}'
+                        tools:background="@color/noteGreenDark"
+                        tools:visibility="visible"/>
 
             </LinearLayout>
+
+            <FrameLayout
+                    android:id="@+id/itemNote_fl_check"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/clSelect"
+                    tools:visibility="visible">
+
+                <ImageView
+                        style="@style/ItemNote.Check"
+                        android:background='@{Pref.getTheme(context) == def.light ? @drawable/ic_note_check_l :  @drawable/ic_note_check_d}'
+                        android:contentDescription="@null"
+                        app:srcCompat="@drawable/ic_check"
+                        tools:background="@drawable/ic_note_check_d"/>
+
+            </FrameLayout>
 
         </FrameLayout>
 
     </androidx.cardview.widget.CardView>
+
 </layout>
