--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -33,27 +33,12 @@
         style="@style/Card"
         app:cardBackgroundColor='@{Clr.getNote(context, itemNote.color, false)}'
         app:cardCornerRadius="@dimen/radius_2dp"
-        app:cardUseCompatPadding="false">
+        app:cardUseCompatPadding="false"
+        tools:cardBackgroundColor="@color/noteGreenLight">
 
         <FrameLayout
             android:id="@+id/itemNote_fl_click"
             style="@style/ItemNote.Click">
-
-            <FrameLayout
-                android:id="@+id/itemNote_fl_check"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/clSelect"
-                tools:visibility="gone">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:tint="?attr/clIcon"
-                    app:srcCompat="@drawable/ic_check" />
-
-            </FrameLayout>
 
             <LinearLayout style="@style/ItemNote.Container">
 
@@ -64,66 +49,46 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/itemNote_tv_name"
                         style="@style/ItemNote.Name"
                         android:text='@{itemNote.name}'
                         android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}'
                         tools:text="@string/test_note_name" />
 
                     <TextView
-                        android:id="@+id/itemNote_tv_text"
                         style="@style/ItemNote.Text"
                         android:text='@{itemNote.text}'
                         tools:text="@string/test_note_text" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/layout_8dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/itemNote_iv_rank"
-                            style="@style/ItemNote.Indicator.Info"
-                            android:contentDescription="@null"
-                            android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
-                            app:srcCompat="@drawable/ic_rank" />
-
-                        <ImageView
-                            android:id="@+id/itemNote_iv_bind"
-                            style="@style/ItemNote.Indicator.Info"
-                            android:contentDescription="@null"
-                            android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
-                            app:srcCompat="@drawable/ic_bind_text" />
-
-                        <TextView
-                            android:id="@+id/itemNote_tv_change"
-                            style="@style/ItemNote.Info"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text='@{Time.formatNoteDate(context, itemNote.change)}'
-                            tools:text="@string/test_note_time" />
-
-                        <TextView
-                            android:id="@+id/itemNote_tv_create"
-                            style="@style/ItemNote.Info"
-                            android:layout_width="wrap_content"
-                            android:text='@{Time.formatNoteDate(context, itemNote.create)}'
-                            tools:text="@string/test_note_time" />
-
-                    </LinearLayout>
+                    <include
+                        layout="@layout/inc_item_note_info"
+                        app:itemNote='@{itemNote}' />
 
                 </LinearLayout>
 
                 <View
-                    android:id="@+id/itemNote_iv_color"
                     style="@style/ItemNote.Color.Vertical"
                     android:background='@{Clr.getNote(context, itemNote.color, true)}'
-                    android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}'
+                    android:visibility='@{Pref.getTheme(context) == def.light ? v.GONE : v.VISIBLE}'
                     tools:background="@color/noteGreenDark"
                     tools:visibility="gone" />
 
             </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/itemNote_fl_check"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?attr/clSelect"
+                tools:visibility="gone">
+
+                <ImageView
+                    style="@style/ItemNote.Check"
+                    android:background='@{Pref.getTheme(context) == def.light ? @drawable/ic_note_check_l :  @drawable/ic_note_check_d}'
+                    android:contentDescription="@null"
+                    app:srcCompat="@drawable/ic_check"
+                    tools:background="@drawable/ic_note_check_l" />
+
+            </FrameLayout>
 
         </FrameLayout>
 
