--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -20,7 +21,7 @@
 
     <androidx.cardview.widget.CardView
         style="@style/Card"
-        app:cardBackgroundColor="?attr/clBackgroundItem"
+        app:cardBackgroundColor="?attr/clBackgroundView"
         app:cardCornerRadius="@dimen/radius_2dp"
         app:cardUseCompatPadding="false">
 
@@ -35,7 +36,8 @@
                 <CheckBox
                     android:id="@+id/itemRoll_cb_check"
                     style="@style/ItemRoll.Read.Check"
-                    android:checked='@{itemRoll.check}' />
+                    android:checked='@{itemRoll.check}'
+                    tools:checked="true" />
 
                 <ImageView
                     android:id="@+id/itemRoll_iv_click"
@@ -50,7 +52,8 @@
                 style="@style/ItemRoll.Read.Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text='@{itemRoll.text}' />
+                android:text='@{itemRoll.text}'
+                tools:text="@string/test_note_roll" />
 
         </LinearLayout>
 
