--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -12,7 +13,7 @@
 
     <androidx.cardview.widget.CardView
         style="@style/Card"
-        app:cardBackgroundColor="?attr/clBackgroundItem"
+        app:cardBackgroundColor="?attr/clBackgroundView"
         app:cardCornerRadius="@dimen/radius_2dp"
         app:cardUseCompatPadding="false">
 
@@ -30,7 +31,8 @@
                     android:id="@+id/itemRoll_ib_drag"
                     style="@style/ItemRoll.Click"
                     android:contentDescription="@null"
-                    app:srcCompat="@drawable/ic_move"/>
+                    app:srcCompat="@drawable/ic_move"
+                    tools:tint="?attr/clAccent" />
 
             </FrameLayout>
 
@@ -40,7 +42,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@null"
-                android:text='@{itemRoll.text}' />
+                android:text='@{itemRoll.text}'
+                tools:text="@string/test_note_roll" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
