--- a/app/src/main/res/menu/menu_act_main.xml
+++ b/app/src/main/res/menu/menu_act_main.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_actMain_pageRank"
-        android:icon="@drawable/ic_rank"
-        android:title="@string/title_frg_rank" />
+            android:id="@+id/menu_actMain_pageRank"
+            android:icon="@drawable/ic_rank"
+            android:title="@string/title_frg_rank"/>
 
     <item
-        android:id="@+id/menu_actMain_pageNote"
-        android:icon="@drawable/se_menu_main_notes"
-        android:title="@string/title_frg_note" />
+            android:id="@+id/menu_actMain_pageNote"
+            android:icon="@drawable/ic_note"
+            android:title="@string/title_frg_note"/>
 
     <item
-        android:id="@+id/menu_actMain_pageBin"
-        android:icon="@drawable/ic_bin"
-        android:title="@string/title_frg_bin" />
+            android:id="@+id/menu_actMain_pageBin"
+            android:icon="@drawable/ic_bin"
+            android:title="@string/title_frg_bin"/>
 
 </menu>
