--- a/app/src/main/res/values-ru/str_app.xml
+++ b/app/src/main/res/values-ru/str_app.xml
@@ -27,13 +27,13 @@
     <string name="info_intro_button">Приступить к работе</string>
 
 
-    <string name="info_empty_rank_title">Нет категорий</string>
-    <string name="info_empty_notes_title">Нет созданных заметок</string>
-    <string name="info_empty_bin_title">Корзина пуста</string>
+    <string name="info_rank_title">Нет категорий</string>
+    <string name="info_notes_title">Нет созданных заметок</string>
+    <string name="info_bin_title">Корзина пуста</string>
 
-    <string name="info_empty_rank_details">Чтобы добавить категорию введите имя в поле сверху</string>
-    <string name="info_empty_notes_details">Чтобы добавить заметку нажмите на центральную кнопку меню</string>
-    <string name="info_empty_bin_details">Удалённые заметки можно в любой момент восстановить</string>
+    <string name="info_rank_details">Чтобы добавить категорию введите имя в поле сверху</string>
+    <string name="info_notes_details">Чтобы добавить заметку нажмите на центральную кнопку меню</string>
+    <string name="info_bin_details">Удалённые заметки можно в любой момент восстановить</string>
 
     <!-- Name of menu items -->
     <string name="menu_page_notes_settings">Настройки</string>
