--- a/app/src/main/res/values/dim_app.xml
+++ b/app/src/main/res/values/dim_app.xml
@@ -11,6 +11,7 @@
     <dimen name="layout_4dp">4dp</dimen>
     <dimen name="layout_2dp">2dp</dimen>
     <dimen name="layout_1dp">1dp</dimen>
+    <dimen name="layout_0dp">0dp</dimen>
 
     <dimen name="icon_128dp">128dp</dimen>
     <dimen name="icon_48dp">48dp</dimen>
