--- a/app/src/main/res/layout/frg_notes.xml
+++ b/app/src/main/res/layout/frg_notes.xml
@@ -1,45 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
-        <import type="sgtmelon.scriptum.R" />
+        <import type="sgtmelon.scriptum.R"/>
 
-        <import
-            alias="v"
-            type="android.view.View" />
+        <import alias="v"
+                type="android.view.View"/>
 
-        <variable
-            name="listEmpty"
-            type="boolean" />
+        <variable name="listEmpty"
+                  type="boolean"/>
 
     </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <include layout="@layout/inc_toolbar" />
-
-        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <include layout="@layout/inc_toolbar"/>
+
+        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
 
             <include
-                layout="@layout/inc_info"
-                android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
-                app:details='@{R.string.info_notes_details}'
-                app:icon='@{R.mipmap.ic_info_notes}'
-                app:title='@{R.string.info_notes_title}' />
+                    layout="@layout/inc_info"
+                    android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
+                    app:details='@{R.string.info_notes_details}'
+                    app:icon='@{R.mipmap.ic_info_notes}'
+                    app:title='@{R.string.info_notes_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/frgNotes_rv"
-                style="@style/RecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility='@{!listEmpty ? v.VISIBLE : v.GONE}' />
+                    android:id="@+id/frgNotes_rv"
+                    style="@style/RecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility='@{!listEmpty ? v.VISIBLE : v.GONE}'/>
 
         </FrameLayout>
 
