--- a/app/src/main/res/layout-v21/inc_toolbar.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:elevation="@dimen/elevation_4dp"
-    android:stateListAnimator="@null">
+<com.google.android.material.appbar.AppBarLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:elevation="@dimen/elevation_4dp"
+        android:stateListAnimator="@null">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/incToolbar_tb"
-        style="?attr/styleToolbar"
-        app:popupTheme="?attr/themePopup"  />
+            android:id="@+id/incToolbar_tb"
+            style="?attr/styleToolbar"
+            app:popupTheme="?attr/themePopup"/>
 
 </com.google.android.material.appbar.AppBarLayout>
