--- a/app/src/main/res/layout-v21/inc_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_note.xml
@@ -1,74 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
-        <import type="sgtmelon.scriptum.R" />
+        <import type="sgtmelon.scriptum.R"/>
 
-        <import type="sgtmelon.scriptum.office.Help.Pref" />
+        <import type="sgtmelon.scriptum.office.Help.Pref"/>
 
-        <import
-            alias="def"
-            type="sgtmelon.scriptum.office.annot.def.DefTheme" />
+        <import alias="def"
+                type="sgtmelon.scriptum.office.annot.def.DefTheme"/>
 
-        <import
-            alias="v"
-            type="android.view.View" />
+        <import alias="v"
+                type="android.view.View"/>
 
-        <variable
-            name="itemNote"
-            type="sgtmelon.scriptum.app.model.item.ItemNote" />
+        <variable name="itemNote"
+                  type="sgtmelon.scriptum.app.model.item.ItemNote"/>
 
-        <variable
-            name="keyEdit"
-            type="boolean" />
+        <variable name="keyEdit"
+                  type="boolean"/>
 
     </data>
 
     <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="@dimen/elevation_4dp"
-        android:stateListAnimator="@null">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="@dimen/elevation_4dp"
+            android:stateListAnimator="@null">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/incToolbar_tb"
-            style="?attr/styleToolbar"
-            app:contentInsetEnd="@dimen/layout_8dp"
-            app:contentInsetLeft="@dimen/layout_8dp"
-            app:contentInsetRight="@dimen/layout_8dp"
-            app:contentInsetStart="@dimen/layout_8dp"
-            app:popupTheme="?attr/themePopup">
+                android:id="@+id/incToolbar_tb"
+                style="?attr/styleToolbar"
+                app:contentInsetEnd="@dimen/layout_8dp"
+                app:contentInsetLeft="@dimen/layout_8dp"
+                app:contentInsetRight="@dimen/layout_8dp"
+                app:contentInsetStart="@dimen/layout_8dp"
+                app:popupTheme="?attr/themePopup">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/incToolbarNote_et_name"
-                    style="@style/ToolbarNote.Enter"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_enter_name"
-                    android:text='@={itemNote.name}'
-                    android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'
-                    tools:text="@string/test_note_name" />
+                        android:id="@+id/incToolbarNote_et_name"
+                        style="@style/ToolbarNote.Enter"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_enter_name"
+                        android:text='@={itemNote.name}'
+                        android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'
+                        tools:text="@string/test_note_name"/>
 
                 <HorizontalScrollView
-                    style="@style/ToolbarNote.Scroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility='@{!keyEdit ? v.VISIBLE : v.GONE}'
-                    tools:visibility="invisible">
+                        style="@style/ToolbarNote.Scroll"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility='@{!keyEdit ? v.VISIBLE : v.GONE}'
+                        tools:visibility="invisible">
 
                     <TextView
-                        style="@style/ToolbarNote.Text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/hint_view_name"
-                        android:text='@{itemNote.name}' />
+                            style="@style/ToolbarNote.Text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/hint_view_name"
+                            android:text='@{itemNote.name}'/>
 
                 </HorizontalScrollView>
 
@@ -77,11 +71,11 @@
         </androidx.appcompat.widget.Toolbar>
 
         <View
-            android:id="@+id/incToolbarNote_iv_color"
-            style="@style/ItemNote.Color.Horizontal"
-            android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}'
-            tools:background="@color/noteRedDark"
-            tools:visibility="gone"/>
+                android:id="@+id/incToolbarNote_iv_color"
+                style="@style/ItemNote.Color.Horizontal"
+                android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}'
+                tools:background="@color/noteRedDark"
+                tools:visibility="gone"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
