--- a/app/src/main/res/layout-v21/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_rank.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.AppBarLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,9 +24,7 @@
             app:cardCornerRadius="@dimen/radius_2dp"
             app:cardUseCompatPadding="false">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
 
                 <ImageButton
                     android:id="@+id/incToolbarRank_ib_cancel"
