--- a/app/src/main/res/layout/act_intro.xml
+++ b/app/src/main/res/layout/act_intro.xml
@@ -1,47 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".app.view.act.ActIntro">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:context=".app.view.act.ActIntro">
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/actIntro_vp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:overScrollMode="never" />
+            android:id="@+id/actIntro_vp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:overScrollMode="never"/>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
 
         <com.rd.PageIndicatorView
-            android:id="@+id/actIntro_piv_page"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/layout_1dp"
-            android:layout_marginRight="@dimen/layout_1dp"
-            android:padding="@dimen/layout_8dp"
-            app:piv_animationType="worm"
-            app:piv_dynamicCount="true"
-            app:piv_interactiveAnimation="true"
-            app:piv_selectedColor="?attr/clIcon"
-            app:piv_unselectedColor="?attr/clSecond"
-            app:piv_viewPager="@id/actIntro_vp" />
+                android:id="@+id/actIntro_piv_page"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/layout_1dp"
+                android:layout_marginRight="@dimen/layout_1dp"
+                android:padding="@dimen/layout_8dp"
+                app:piv_animationType="worm"
+                app:piv_dynamicCount="true"
+                app:piv_interactiveAnimation="true"
+                app:piv_selectedColor="?attr/clIcon"
+                app:piv_unselectedColor="?attr/clSecond"
+                app:piv_viewPager="@id/actIntro_vp"/>
 
         <Button
-            android:id="@+id/actIntro_b"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/layout_8dp"
-            android:text="@string/info_intro_button"
-            android:textColor="?attr/clAccent" />
+                android:id="@+id/actIntro_b"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/layout_8dp"
+                android:text="@string/info_intro_button"
+                android:textColor="?attr/clAccent"/>
 
     </FrameLayout>
 </LinearLayout>
