--- a/app/src/main/res/layout/frg_text.xml
+++ b/app/src/main/res/layout/frg_text.xml
@@ -1,57 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
-        <import
-            alias="v"
-            type="android.view.View" />
+        <import alias="v"
+                type="android.view.View"/>
 
-        <variable
-            name="itemNote"
-            type="sgtmelon.scriptum.app.model.item.ItemNote" />
+        <variable name="itemNote"
+                  type="sgtmelon.scriptum.app.model.item.ItemNote"/>
 
-        <variable
-            name="keyEdit"
-            type="boolean" />
+        <variable name="keyEdit"
+                  type="boolean"/>
 
     </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/clBackgroundView"
-        android:orientation="vertical">
-
-        <include
-            layout="@layout/inc_toolbar_note"
-            app:itemNote='@{itemNote}'
-            app:keyEdit='@{keyEdit}' />
-
-        <ScrollView
-            android:id="@+id/frgText_sv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:background="?attr/clBackgroundView"
+            android:orientation="vertical">
 
-            <FrameLayout
+        <include
+                layout="@layout/inc_toolbar_note"
+                app:itemNote='@{itemNote}'
+                app:keyEdit='@{keyEdit}'/>
+
+        <ScrollView
+                android:id="@+id/frgText_sv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:fillViewport="true">
+
+            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/frgText_et_enter"
-                    style="@style/Text.Enter"
-                    android:text='@={itemNote.text}'
-                    android:visibility='@{keyEdit ? v.VISIBLE : v.INVISIBLE}' />
+                        android:id="@+id/frgText_et_enter"
+                        style="@style/Text.Enter"
+                        android:text='@={itemNote.text}'
+                        android:visibility='@{keyEdit ? v.VISIBLE : v.INVISIBLE}'/>
 
                 <TextView
-                    android:id="@+id/frgText_tv_text"
-                    style="@style/Text.Read"
-                    android:text='@{itemNote.text}'
-                    android:visibility='@{!keyEdit ? v.VISIBLE : v.INVISIBLE}'
-                    tools:text="@string/test_note_text" />
+                        android:id="@+id/frgText_tv_text"
+                        style="@style/Text.Read"
+                        android:text='@{itemNote.text}'
+                        android:visibility='@{!keyEdit ? v.VISIBLE : v.INVISIBLE}'
+                        tools:text="@string/test_note_text"/>
 
             </FrameLayout>
 
