--- a/app/src/main/res/layout/inc_item_note_roll.xml
+++ b/app/src/main/res/layout/inc_item_note_roll.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
-        <variable
-            name="itemRoll"
-            type="sgtmelon.scriptum.app.model.item.ItemRoll" />
+        <variable name="itemRoll"
+                  type="sgtmelon.scriptum.app.model.item.ItemRoll"/>
 
     </data>
 
-    <LinearLayout style="@style/ItemNote.Container.Roll"
-        tools:ignore="UseCompoundDrawables">
+    <LinearLayout style="@style/ItemNote.Container.Roll" tools:ignore="UseCompoundDrawables">
 
         <ImageView
-            style="@style/ItemNote.Indicator"
-            android:contentDescription="@null"
-            android:src='@{itemRoll != null &amp;&amp; itemRoll.check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-            tools:srcCompat="@drawable/ic_check_done" />
+                style="@style/ItemNote.Indicator"
+                android:contentDescription="@null"
+                android:src='@{itemRoll != null &amp;&amp; itemRoll.check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
+                tools:srcCompat="@drawable/ic_check_done"/>
 
         <TextView
-            style="@style/ItemNote.Roll"
-            android:text='@{itemRoll != null ? itemRoll.text : ""}'
-            tools:text="@string/test_note_roll" />
+                style="@style/ItemNote.Roll"
+                android:text='@{itemRoll != null ? itemRoll.text : ""}'
+                tools:text="@string/test_note_roll"/>
 
     </LinearLayout>
 
