--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -1,50 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
-        <import type="sgtmelon.scriptum.office.Help.Draw" />
+        <import type="sgtmelon.scriptum.office.Help.Draw"/>
 
-        <variable
-            name="position"
-            type="int" />
+        <variable name="position"
+                  type="int"/>
 
     </data>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:padding="@dimen/layout_8dp">
-
-        <ImageView
-            android:id="@+id/itemColor_iv_background"
-            android:layout_width="@dimen/icon_48dp"
-            android:layout_height="@dimen/icon_48dp"
-            android:layout_gravity="center"
-            android:background='@{Draw.getIconColor(context, position)}'
-            android:contentDescription="@null"
-            tools:background="@drawable/ic_color_00_l" />
-
-        <ImageView
-            android:id="@+id/itemColor_iv_check"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:contentDescription="@null"
-            app:srcCompat="@drawable/ic_check"
-            tools:tint="@color/noteRedDark" />
+            android:gravity="center"
+            android:padding="@dimen/layout_8dp">
 
         <ImageView
-            android:id="@+id/itemColor_iv_click"
-            android:layout_width="@dimen/icon_48dp"
-            android:layout_height="@dimen/icon_48dp"
-            android:layout_gravity="center"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@null" />
+                android:id="@+id/itemColor_iv_background"
+                android:layout_width="@dimen/icon_48dp"
+                android:layout_height="@dimen/icon_48dp"
+                android:layout_gravity="center"
+                android:background='@{Draw.getIconColor(context, position)}'
+                android:contentDescription="@null"
+                tools:background="@drawable/ic_color_00_l"/>
+
+        <ImageView
+                android:id="@+id/itemColor_iv_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@null"
+                app:srcCompat="@drawable/ic_check"
+                tools:tint="@color/noteRedDark"/>
+
+        <ImageView
+                android:id="@+id/itemColor_iv_click"
+                android:layout_width="@dimen/icon_48dp"
+                android:layout_height="@dimen/icon_48dp"
+                android:layout_gravity="center"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@null"/>
 
     </FrameLayout>
 </layout>
