--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -9,25 +9,20 @@
 
         <import type="sgtmelon.scriptum.office.Help.Pref"/>
 
-        <import
-                alias="def"
+        <import alias="def"
                 type="sgtmelon.scriptum.office.annot.def.DefTheme"/>
 
-        <import
-                alias="text"
+        <import alias="text"
                 type="android.text.TextUtils"/>
 
-        <import
-                alias="v"
+        <import alias="v"
                 type="android.view.View"/>
 
-        <variable
-                name="itemNote"
-                type="sgtmelon.scriptum.app.model.item.ItemNote"/>
+        <variable name="itemNote"
+                  type="sgtmelon.scriptum.app.model.item.ItemNote"/>
 
-        <variable
-                name="listRoll"
-                type="java.util.List&lt;sgtmelon.scriptum.app.model.item.ItemRoll&gt;"/>
+        <variable name="listRoll"
+                  type="java.util.List&lt;sgtmelon.scriptum.app.model.item.ItemRoll&gt;"/>
 
     </data>
 
@@ -92,22 +87,6 @@
                         tools:visibility="visible"/>
 
             </LinearLayout>
-
-            <FrameLayout
-                    android:id="@+id/itemNote_fl_check"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="?attr/clSelect"
-                    tools:visibility="visible">
-
-                <ImageView
-                        style="@style/ItemNote.Check"
-                        android:background='@{Pref.getTheme(context) == def.light ? @drawable/ic_note_check_l :  @drawable/ic_note_check_d}'
-                        android:contentDescription="@null"
-                        app:srcCompat="@drawable/ic_check"
-                        tools:background="@drawable/ic_note_check_d"/>
-
-            </FrameLayout>
 
         </FrameLayout>
 
